<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ivyclub.contact.ui.main.friend.FriendViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="#D9EDDF"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_settings_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/fragment_friend_settings"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_settings_24"
                android:visibility="@{viewModel.isInLongClickedState ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_add_friend_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/fragment_friend_add_friends_or_group"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="@id/iv_settings_icon"
                app:layout_constraintEnd_toStartOf="@id/iv_settings_icon"
                app:layout_constraintTop_toTopOf="@id/iv_settings_icon" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:clickable="true"
                android:contentDescription="@string/fragment_friend_search"
                android:focusable="true"
                android:onClick="@{()->viewModel.setSearchViewVisibility()}"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_search_24"
                android:visibility="@{viewModel.isInLongClickedState ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="@id/iv_settings_icon"
                app:layout_constraintEnd_toStartOf="@id/iv_add_friend_icon"
                app:layout_constraintTop_toTopOf="@id/iv_settings_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/shape_search_friend_list_edit_text"
            android:hint="@string/fragment_friend_find_friend"
            android:importantForAutofill="no"
            android:inputType="text"
            android:onTextChanged="@{(text, start, before, count) -> viewModel.onEditTextClicked(text)}"
            android:padding="8dp"
            android:visibility="@{viewModel.isSearchViewVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
            app:layout_constraintBottom_toTopOf="@id/rv_friend_list"/>

        <ImageView
            android:id="@+id/iv_remove_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/fragment_friend_remove_input_text"
            android:src="@drawable/ic_baseline_clear_24"
            android:visibility="@{viewModel.isClearButtonVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            app:layout_constraintEnd_toEndOf="@id/et_search"
            app:layout_constraintTop_toTopOf="@id/et_search" />

        <ImageView
            android:id="@+id/iv_add_friend_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/fragment_friend_add_friend"
            android:src="@drawable/ic_baseline_person_add_24"
            android:visibility="@{viewModel.isFriendDatabaseEmpty ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/tv_add_friend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_add_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_friend_click_plus_button"
            android:visibility="@{viewModel.isFriendDatabaseEmpty ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_friend_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:scrollbarSize="8dp"
            android:paddingVertical="4dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"
            tools:listitem="@layout/item_friend_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>