...
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_back_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_get_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="20dp"
            android:padding="12dp"
            android:text="@string/fragment_settings_get_contacts"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_baseline_import_contacts_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings" />
...
