...
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_save_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/fragment_friend_settings"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_check_24"
...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/add_friend_name"
                    android:textColor="@color/green_300"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/et_name"
                    app:layout_constraintStart_toEndOf="@id/iv_profile_image"
                    app:layout_constraintTop_toTopOf="@+id/iv_profile_image"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/et_name"
...
